Version 0.46.0 (in progress)

  * initconfig utility now supports optional directory to use as a template config
  * allow non-interactive option for addalias command
  * inclusion of .spec file to support RPM packaging
  * bug fix for config_latest_install utility when config_dir is not defined

Version 0.45.0 (25 April 2014)

  * typo/grammar edits in INSTALL directions
  * addition of simple upgrade utility to help configure LosF after downloading
    an updated release tarball.  Running "misc/config_latest_install" will update
    a top-level losf soft link to point at the downloaded version, and will
    update the config/config_dir setting based on previously installed
    configurations.

Version 0.44.1 (23 April 2014)

  * bug fix for sync_config_file failure introduced after addition of koomie_cf -n option

Version 0.44.0 (13 April 2014)

  * new option for koomie_cf: use -n <node_type> to run parallel commands
    across a pre-defined LosF node-type
  * example kickstart files for use with LosF included in top-level kickstarts/
    directory along with Cobbler snippets in corresponding snippets/ directory
  * added --noprovision option to losf add; allows addition without
    normal provisioning definition requirements (convenient for switches, BMCs, etc.)
  * enhancement to allow for node-type specific config file syncing control
  * fixed missing final update notification when file ownership/permissions changed
  * initconfig utility now includes example networking config file
  * initconfig updated to create const_files/ path for default node type
  * use environment perl path in favor of hard-coded path
  * update help to indicate initconfig option
  * bug fix in error handling for initconfig utility

Version 0.43.0 (03 January 2014)

  * expanded INSTALL directions
  * new initialization utility "initconfig" provided, see INSTALL for more details
  * addition of "losf addalias" option to register custom package alias for installation